# sds-hazard-crossref

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sds_hazard_crossref/: __init__.py  main.py  refresh_cli.py
src/sds_hazard_crossref/data/: name_synonyms.json
src/sds_hazard_crossref/matching/: __init__.py  engine.py  synonyms.py
src/sds_hazard_crossref/parser_core/: __init__.py  cas.py  composition.py  names.py  sds_document.py
src/sds_hazard_crossref/persistence/: __init__.py  component_key.py  dispositions.py  io_utils.py  master_list.py
src/sds_hazard_crossref/plugins/: __init__.py  base.py  epcra_313_tri.py
src/sds_hazard_crossref/refresh/: __init__.py  epcra_313_tri_fetch.py
tests/: test_cas.py  test_component_key.py  test_composition.py  test_composition_table_extraction.py  test_dispositions.py  test_end_to_end.py  test_epcra_313_tri_fetch.py  test_epcra_313_tri_plugin.py  test_main_cli.py  test_master_list.py  test_matching.py  test_names.py  test_refresh_cli.py  test_sds_document.py
tests/fixtures/: README.md  epcra_313_tri_TEST_FIXTURE.csv  synthetic_acetone_sds.txt
