[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sds-hazard-crossref"
version = "0.1.0"
description = "Batch SDS multi-list hazard cross-reference tool — screens SDS PDFs against multiple public regulatory and occupational exposure hazard lists"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pymupdf==1.27.2.3",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sds-crossref = "sds_hazard_crossref.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sds_hazard_crossref*"]

[tool.setuptools.package-data]
sds_hazard_crossref = ["data/*.json"]
